# PyTrade

./: .coveragerc  .dockerignore  .env  .flake8  .gitignore  Makefile  pyproject.toml
.github/workflows/: build.yml
docker/: Dockerfile  docker-compose.yaml
fx_lib/: _util.py  broker.py  events.py  strategy.py
fx_lib/events/: candlestick_event.py
fx_lib/interfaces/: __init__.py  broker.py  client.py  data.py
fx_lib/models/: __init__.py  broker.py  data.py  granularity.py  indicator.py  instruments.py  order.py
makefiles/: local.mk
pytrade/: _util.py  broker.py  data.py  indicator.py  instruments.py  logging.py  models.py  strategy.py
pytrade/events/: candlestick_event.py  event.py  typed_event.py
pytrade/interfaces/: account.py  broker.py  client.py  data.py  position.py
pytrade/models/: broker.py  indicator.py  instruments.py  order.py  position.py  trade.py
scripts/: test.sh
tests/unit/: test_broker.py  test_indicator.py  test_instrument_history.py  test_models.py  test_strategy.py
